# whatsapp-bridge

./: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  go.mod  go.sum  railway.toml  render-old.yaml  render.yaml  start-mcp-server.sh
whatsapp-bridge/: .dockerignore  Dockerfile  README.md  go.mod  main.go  render.yaml
whatsapp-mcp-server/: Dockerfile  main.py  pyproject.toml
